--- a/RazorWebApp/Pages/Index.cshtml
+++ b/RazorWebApp/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Movies Razor Web App Core 3.1</a>.</p>
+    <p>Movies Razor Web App Core 3.1.</p>
 </div>
